CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(BHVR_TREE)

# silence policy CMP0042 warning by enabling RPATH explicitly
IF(APPLE AND NOT DEFINED CMAKE_MACOSX_RPATH)
	SET(CMAKE_MACOSX_RPATH TRUE)
ENDIF()

SET(CMAKE_MODULE_PATH ${BHVR_TREE_SOURCE_DIR}/cmake)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
INCLUDE_DIRECTORIES(${BHVR_TREE_SOURCE_DIR})

ENABLE_TESTING()
ADD_SUBDIRECTORY(test)

FIND_PACKAGE(CAF COMPONENTS core)
IF(CAF_FOUND)
	ADD_SUBDIRECTORY(sample)
ENDIF()

FILE(GLOB BHVR_TREE_HEADERS ranger/bhvr_tree/*.hpp)
INSTALL(FILES ${BHVR_TREE_HEADERS} DESTINATION include/ranger/bhvr_tree)
FILE(GLOB BHVR_TREE_DETAIL_HEADERS ranger/bhvr_tree/detail/*.hpp)
INSTALL(FILES ${BHVR_TREE_DETAIL_HEADERS} DESTINATION include/ranger/bhvr_tree/detail)
